# LaserControl

./: LaserConrtolOLD.py  PicoLive.py  feature_plan_live_controls.md  implementation_plan_layout.md  main.py  pyproject.toml  refactoring_plan.md  reproduction_analysis.md  santec.py  walkthrough.md
config/: settings.md  settings.toml
src/laser_control/: main.py
src/laser_control/core/: engine.py
src/laser_control/drivers/: base.py  laser.py  mocks.py  scope.py
src/laser_control/gui/: main_window.py
src/laser_control/gui/dialogs/: connection.py
src/laser_control/gui/widgets/: live_plot.py  sweep_plot.py
src/laser_control/utils/: config.py  data_manager.py
