[project]
name = "laser-control"
version = "0.1.0"
description = "Laser Control and Analysis Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.0.0",
    "pyqtgraph>=0.13.0",
    "pyvisa>=1.14.0",
    "picosdk>=1.0", 
    "numpy>=1.20.0",
    "pandas>=2.0.0",
    "lmfit>=1.2.0",
    "toml>=0.10.0"
]

[project.scripts]
laser-control = "laser_control.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
